--- a/PictureFixer/Client/Pages/Editor/EditImage.razor
+++ b/PictureFixer/Client/Pages/Editor/EditImage.razor
@@ -76,8 +76,8 @@
     private async Task RunPatchMatchAsync(byte[] imageBytes, byte[] selectionBytes)
     {
         isProcessing = true;
-        var sourceImage = Image.Load<Rgb24>(imageBytes);
-        var maskImage = Image.Load<Rgb24>(selectionBytes);
+        var sourceImage = SixLabors.ImageSharp.Image.Load<Rgb24>(imageBytes);
+        var maskImage = SixLabors.ImageSharp.Image.Load<Rgb24>(selectionBytes);
         var patchMatch = new PatchMatch(sourceImage, maskImage, patchSize: 8);
         var startTime = DateTime.Now;
         while (patchMatch.PercentCompleted < 100)
