--- a/PictureFixer/Client/Pages/Home/Index2.razor
+++ b/PictureFixer/Client/Pages/Home/Index2.razor
@@ -3,21 +3,9 @@
 @inject ComponentApplicationState PersistentData
 @inject HttpClient Http
 
-@if (images == null)
-{
-    <div class="loading">
-        <img src="spinner.gif" alt="Loading indicator" /> Loading
-    </div>
-}
-else
-{
-    <div class="m-4 my-5 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-        @foreach (var image in images)
-        {
-            <ImageListItem Image="@image" />
-        }
-    </div>
-}
+<ImageList Items="@images">
+    <ImageListItem Image="@context"/>
+</ImageList>
 
 @code {
     private EditableImage[] images;
